# fizzbuzz

./: README.md  fizzbuzz.cabal
src/: Main.hs
test/: Tests.hs
